add sphere, orb, and torus

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			scene.add(axes);
 
 			var gdmlLoader = new THREE.GDMLLoader();
-			gdmlLoader.load('./gdml/solids.gdml', function(objects){
+			gdmlLoader.load('./gdml/Par02FullDetector.gdml', function(objects){
 				scene.add(objects);
 			});
 
